# kairo-scaffold

./: .gitattributes  .gitignore  .gitleaksignore  .placeholder  BENCHMARKS.md  CORE_SYNC.md  CORE_SYNC_LOG.md  Cargo.toml  FAILURE_TAXONOMY.md  Makefile  README.md  SCAFFOLD_LEDGER.md  index.html  package-lock.json  package.json  quickstart.sh  requirements-min.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
bench/: Cargo.toml  check_regression.py  eval_harness.py  leaderboard.json  questions.json  questions_extended.json  ragas_adapter.py  run_bench.py  score.py
cli/: Cargo.toml  main.py
contracts/: README.md  validate_contracts.py
docs/: AUDIT.md  SHOW_HN.md  THREATMODEL.md  connector_guide.md
fixtures/: README.md
installers/: build_sidecar.py  kairo_sidecar.spec
kernel/core/: Cargo.toml
kernel/core/src/: lib.rs  main.rs
kernel/sidecar/: app.py  model_gateway.py  pdf_fastpath.py  pyproject.toml  requirements.txt
kernel/sidecar/cascade/: front_select.py
kernel/sidecar/ingest/: __init__.py  bbox_verify.py  ocr_backends.py  quote_align.py
kernel/sidecar/models/: __init__.py  consistency_checker.py  constrained_decoding.py  embeddings.py  error_handling.py  injection_guard.py  kairo_logger.py  migration.py  model_routing.py  rag_shield.py  secrets.py  sted.py  tier_client.py  vgva.py
kernel/sidecar/retrieval/: __init__.py  colpali_retriever.py  leann_index.py  migration.py  vector_store.py
kernel/sidecar/src/kairo_sidecar/: main.py
legacy/: bench_README.md  overlay_README.md
overlay/: fuzz.test.js  index.html  package.json
overlay/src-tauri/: Cargo.toml  cargo_check_err.txt  entitlements.plist  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/icons/: generate_ico.py
overlay/src-tauri/permissions/: allow-custom-commands.toml
overlay/src-tauri/src/: asset_protocol.rs  main.rs  migration.rs  sidecar.rs
overlay/src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
receipts/: G11_core_sync.txt  G12_derig_phrase.txt  G3_G5_bench_infra_pending.txt  G6_tauri_signing.txt  G8_injection_corpus_block.txt  (+22 more)
(+436 files in other folders)
