[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairo-sidecar"
version = "0.1.0"
description = "Kairo Sidecar Stub App"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "docling>=2.0.0",
    "supervision>=0.19.0",
    "qdrant-client>=1.8.0",
    "paddleocr>=2.7.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]
