[package]
name = "kairo-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kairo-overlay"
path = "src/main.rs"
test = false

[dependencies]
tauri = { version = "=2.11.1", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-shell = "2.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Windows-only: raw HWND access for WS_EX_LAYERED / DPI awareness ──────────
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }

# ── macOS-only: NSVisualEffectView + NSWindow level via objc2 ─────────────────
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSView",
    "NSVisualEffectView",
    "NSWindow",
] }
raw-window-handle = "0.6"

[build-dependencies]
tauri-build = "2.0.0"
